--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,7 @@ decorator==5.1.1
 deep-translator==1.11.4
 dj-database-url==2.2.0
 Django==5.1.1
-dlib==19.24.4
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+en-core-web-sm==3.7.1
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.0.1
@@ -65,7 +64,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.10
 networkx==3.3
-nltk==3.8.1
+nltk==3.8.2
 numexpr==2.10.1
 numpy==1.26.4
 opencv-python==4.10.0.84
